# wamr-rust-pthreadcall

./: Cargo.toml  Readme.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: lib.rs
